--- a/ColorLib/src/CMakeLists.txt
+++ b/ColorLib/src/CMakeLists.txt
@@ -1,9 +1,14 @@
 add_library(colorLib
-    STATIC
+    #STATIC
         ColorLib.cpp
 )
 
 target_include_directories(colorLib
     PUBLIC
         .
+)
+
+target_link_libraries(colorLib
+    PUBLIC
+        sdlHelperLib
 )
