--- a/ResourceLib/CMakeLists.txt
+++ b/ResourceLib/CMakeLists.txt
@@ -1,8 +1,20 @@
-add_library(resourceLib STATIC
-    SDLHelper.cpp
-    SDLManager.cpp
-    SDLResourceManager.cpp
-    ServiceLocator.cpp
+add_library(sdlHelperLib
+    STATIC
+        SDLHelper.cpp
+)
+
+target_include_directories(sdlHelperLib
+    PRIVATE
+        include
+    PUBLIC
+        . # TODO : should not expose all header files here!
+)
+
+add_library(resourceLib
+    STATIC
+        SDLManager.cpp
+        SDLResourceManager.cpp
+        ServiceLocator.cpp
 )
 
 target_include_directories(resourceLib
@@ -15,4 +27,6 @@ target_include_directories(resourceLib
 target_link_libraries(resourceLib
     PUBLIC
         exceptionLib
+    PRIVATE
+        sdlHelperLib
 )
