Working test application with rectangle rendering

--- a/worlds-best-text-editor-3/CMakeLists.txt
+++ b/worlds-best-text-editor-3/CMakeLists.txt
@@ -4,6 +4,9 @@ project(worlds-best-text-editor-3)
 
 #find_package(fmt CONFIG REQUIRED)
 find_package(SDL3 CONFIG REQUIRED)
+find_package(spdlog CONFIG REQUIRED)
+
+add_subdirectory(spdlog_util)
 
 add_executable(
     worlds-best-text-editor-3
@@ -13,6 +16,7 @@ add_executable(
 target_link_libraries(
     worlds-best-text-editor-3
     PRIVATE
+    spdlog_util
     #fmt::fmt
     SDL3::SDL3
 )
