add color util library

--- a/worlds-best-text-editor-3/CMakeLists.txt
+++ b/worlds-best-text-editor-3/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(SDL3 CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 
 add_subdirectory(spdlog_util)
+add_subdirectory(color_util)
 
 add_executable(
     worlds-best-text-editor-3
@@ -17,6 +18,7 @@ target_link_libraries(
     worlds-best-text-editor-3
     PRIVATE
     spdlog_util
+    color_util
     #fmt::fmt
     SDL3::SDL3
 )
