Text rendering test working

--- a/worlds-best-text-editor-3/CMakeLists.txt
+++ b/worlds-best-text-editor-3/CMakeLists.txt
@@ -4,6 +4,7 @@ project(worlds-best-text-editor-3)
 
 #find_package(fmt CONFIG REQUIRED)
 find_package(SDL3 CONFIG REQUIRED)
+find_package(SDL3_ttf CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 
 add_subdirectory(spdlog_util)
@@ -17,8 +18,9 @@ add_executable(
 target_link_libraries(
     worlds-best-text-editor-3
     PRIVATE
+    #fmt::fmt
     spdlog_util
     color_util
-    #fmt::fmt
     SDL3::SDL3
+    SDL3_ttf::SDL3_ttf
 )
