--- a/worlds-best-text-editor-3/CMakeLists.txt
+++ b/worlds-best-text-editor-3/CMakeLists.txt
@@ -12,6 +12,8 @@ add_subdirectory(spdlog_util)
 add_subdirectory(application_configuration)
 add_subdirectory(application_resources)
 add_subdirectory(color_util)
+add_subdirectory(document)
+add_subdirectory(text_layout_engine)
 
 add_executable(
     worlds-best-text-editor-3
@@ -26,6 +28,7 @@ target_link_libraries(
     application_configuration
     application_resources
     color_util
+    text_layout_engine
     SDL3::SDL3
     SDL3_ttf::SDL3_ttf
     JsonCpp::JsonCpp
