--- a/worlds-best-text-editor-3/CMakeLists.txt
+++ b/worlds-best-text-editor-3/CMakeLists.txt
@@ -9,11 +9,14 @@ find_package(spdlog CONFIG REQUIRED)
 find_package(jsoncpp CONFIG REQUIRED)
 
 add_subdirectory(spdlog_util)
+add_subdirectory(window_geometry)
 add_subdirectory(application_configuration)
 add_subdirectory(application_resources)
 add_subdirectory(color_util)
 add_subdirectory(document)
 add_subdirectory(text_layout_engine)
+add_subdirectory(text_layout_engine_measure_string)
+add_subdirectory(text_area)
 
 add_executable(
     worlds-best-text-editor-3
@@ -28,7 +31,8 @@ target_link_libraries(
     application_configuration
     application_resources
     color_util
-    text_layout_engine
+    text_layout_engine_measure_string
+    text_area
     SDL3::SDL3
     SDL3_ttf::SDL3_ttf
     JsonCpp::JsonCpp
