now possible to insert characters at the start of document

--- a/worlds-best-text-editor-3/text_area/src/CMakeLists.txt
+++ b/worlds-best-text-editor-3/text_area/src/CMakeLists.txt
@@ -16,4 +16,7 @@ target_link_libraries(
     spdlog_util
     text_layout_engine_measure_string
     window_geometry
+
+    # note: only really needs command
+    event_system
 )
