WIP. Code working, but may prefer previous version where creating document layout was separated from visual cursor positioning

--- a/worlds-best-text-editor-3/text_layout_engine_measure_string/src/CMakeLists.txt
+++ b/worlds-best-text-editor-3/text_layout_engine_measure_string/src/CMakeLists.txt
@@ -2,6 +2,8 @@ add_library(
     text_layout_engine_measure_string
     STATIC
     text_layout_engine_measure_string.cpp
+    create_document_layout_2.cpp
+    wrap_line.cpp
 )
 
 target_include_directories(
